--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.39.0", features = ["full"] }
-futures-util = "0.3"
+async-task = "4.4.0"
+futures-lite = "1.12.0"
+flume = "0.10.14"
